kubernetes/apps/media/teamarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teamarr
spec:
  selector:
    app: teamarr
  ports:
    - port: 9195
      targetPort: http
      name: http
